fixed overflow things

--- a/src/components/Flashcard.css
+++ b/src/components/Flashcard.css
@@ -12,7 +12,7 @@
   font-size: 1.5em;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 600px) {
   .card {
     display: flex;
     justify-content: center;
@@ -27,13 +27,34 @@
   }
 }
 
-@media (min-width: 701px) {
+@media (min-width: 601px) and (max-width: 1104px) {
   .card {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 400px;
     max-height: 400px;
+  }
+  .front-text,
+  .back-text {
+    max-height: 40vh;
+    max-width: 50vw;
+    overflow: scroll;
+  }
+}
+
+@media (min-width: 1104px) {
+  .card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+    max-height: 400px;
+  }
+  .front-text,
+  .back-text {
+    max-width: 800px;
+    overflow: scroll;
   }
 }
 
